# neo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.production  Dockerfile.widgets  Makefile  README.md  docker-compose.yml  fly.toml
.github/agents/: audit.md
.github/workflows/: build.yml  ci.yml  deploy.yml
backend/: go.mod  go.sum
changes/: README.md
changes/01-foundation/: design.md  proposal.md  spec.md  tasks.md
changes/02-design-system/: design.md  proposal.md  spec.md  tasks.md
changes/03-blog-backend/: design.md  proposal.md  spec.md  tasks.md
changes/04-blog-frontend/: design.md  proposal.md  spec.md  tasks.md
changes/05-comments-and-interactions/: design.md  proposal.md  spec.md  tasks.md
changes/06-admin-panel/: design.md  proposal.md  spec.md  tasks.md
changes/07-pages-and-navigation/: design.md  proposal.md  spec.md  tasks.md
changes/08-widget-integration/: design.md  proposal.md  spec.md  tasks.md
changes/09-production-deployment/: design.md  proposal.md  spec.md  tasks.md
changes/10-oauth-login/: design.md  proposal.md  spec.md  tasks.md
changes/11-cicd/: design.md  proposal.md  spec.md  tasks.md
docs/implementation/: milestones.md
docs/prepare/: README.md  design-system.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
widgets/: pyproject.toml
widgets/app/: main.py
widgets/app/routes/: __init__.py
widgets/app/services/: __init__.py
widgets/app/widgets/: __init__.py  sentiment.py
widgets/tests/: test_health.py  test_widgets.py
(+124 files in other folders)
